--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,9 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "index.js"
+      "src": "/api/signup",
+      "dest": "/api/signup",
+      "methods": ["POST"]
     }
   ]
 }
