--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/signup",
-      "dest": "/api/signup",
-      "methods": ["POST"]
+      "src": "/api/(.*)",
+      "dest": "/server.js"
     }
   ]
 }
